--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,50 @@ body {
 .firstHead {
     font-family: 'Pacifico', cursive;
     letter-spacing: 0.5em;
+    margin-bottom: -0.25em;
 }
 
 .firstHead span {
     font-size: 2em;
+}
+
+.restart {
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+#reload:hover {
+    cursor: pointer;
+}
+
+.health {
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+progress {
+    width: 50%;
+    padding: 0.25em;
+    background: #444;
+    border-radius: 14px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+}
+
+progress::-moz-progress-bar {
+    border-radius: 12px;
+    background: rgba(49, 226, 18, 0.5)
+    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
+
+}
+
+progress::-webkit-progress-bar {
+    background: transparent;
+}
+
+progress::-webkit-progress-value {
+    border-radius: 12px;
+    background: rgba(49, 226, 18, 0.5)
+    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
 }
 
 canvas {
