--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,8 @@
 body {
     text-align: center;
     background-image: url("../images/geometry2.png");
-}
-
-.firstHead {
-    font-family: 'Pacifico', cursive;
-    letter-spacing: 0.5em;
-    margin-bottom: -0.25em;
-}
-
-.firstHead span {
-    font-size: 2em;
-}
-
-.restart {
-    margin-bottom: 1em;
-    text-align: center;
-}
-
-#reload:hover {
-    cursor: pointer;
-}
-
-.health {
-    margin-bottom: 1em;
-    text-align: center;
-}
-
-progress {
-    width: 50%;
-    padding: 0.25em;
-    background: #444;
-    border-radius: 14px;
-    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
-}
-
-progress::-moz-progress-bar {
-    border-radius: 12px;
-    background: rgba(49, 226, 18, 0.5)
-    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
-
-}
-
-progress::-webkit-progress-bar {
-    background: transparent;
-}
-
-progress::-webkit-progress-value {
-    border-radius: 12px;
-    background: rgba(49, 226, 18, 0.5)
-    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
-}
-
-canvas {
-    outline: 0.25em solid;
-    outline-color: rgba(0, 0, 255, 0.5);
+    height: 100%;
+    width: 100%;
 }
 
 /* The Modal (background) */
@@ -107,4 +55,119 @@ canvas {
 
 .bounce {
     animation-name: bounce;
+}
+
+.firstHead {
+    font-family: 'Pacifico', cursive;
+    letter-spacing: 0.35em;
+    margin-bottom: -0.05em;
+}
+
+.firstHead span {
+    font-size: 2em;
+}
+
+.leader {
+    margin-bottom: 1.05em;
+    text-align: center;
+}
+
+.leader span {
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
+.stat {
+    margin-bottom: 1.05em;
+    text-align: center;
+}
+
+.stat span {
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
+#reload {
+    margin-right: 5em;
+}
+
+#reload:hover {
+    cursor: pointer;
+}
+
+.health {
+    margin-bottom: 1.05em;
+    text-align: center;
+}
+
+progress {
+    width: 15em;
+    padding: 0.25em;
+    background: #444;
+    border-radius: 14px;
+    box-shadow: inset 0px 1px 1px rgba(0,0,0,0.5), 0px 1px 0px rgba(255,255,255,0.2);
+}
+
+progress::-moz-progress-bar {
+    border-radius: 12px;
+    background: rgba(49, 226, 18, 0.5)
+    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
+
+}
+
+progress::-webkit-progress-bar {
+    background: transparent;
+}
+
+progress::-webkit-progress-value {
+    border-radius: 12px;
+    background: rgba(49, 226, 18, 0.5)
+    box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
+}
+
+canvas {
+    outline: 0.25em solid;
+    outline-color: rgba(0, 0, 255, 0.5);
+}
+
+.keys {
+    text-align: center;
+}
+
+.keyimg:hover {
+    cursor: pointer;
+}
+
+#arrowone {
+    margin-top: 3em;
+}
+
+#arrowup {
+    height: 4em;
+    width : 4em;
+}
+
+#arrowtwo {
+    margin-top: -1em;
+}
+
+#arrowleft {
+    margin: 0 0.70em 0 0 ;
+    height: 4em;
+    width : 4em;
+}
+
+#arrowright {
+    margin: 0 0 0 0.75em;
+    height: 4em;
+    width : 4em;
+}
+
+#arrowthree {
+    margin-top: -1em;
+}
+
+#arrowdown {
+    height: 4em;
+    width : 4em;
 }
