--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ progress {
 
 progress::-moz-progress-bar {
     border-radius: 12px;
-    background: rgba(49, 226, 18, 0.5)
+    background: rgba(49, 226, 18, 0.5);
     box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
 
 }
@@ -152,7 +152,7 @@ progress::-webkit-progress-bar {
 
 progress::-webkit-progress-value {
     border-radius: 12px;
-    background: rgba(49, 226, 18, 0.5)
+    background: rgba(49, 226, 18, 0.5);
     box-shadow: inset 0 -2px 4px rgba(0,0,0,0.4), 0 2px 5px 0px rgba(0,0,0,0.3);
 }
 
